@@ -1,3 +1,5 @@
+2010-06-02 Add error_kw kwarg to Axes.bar(). - EF
+
 2010-06-01 Fix pcolormesh() and QuadMesh to pass on kwargs as
            appropriate. - RM
 
